--- a/pom.xml
+++ b/pom.xml
@@ -49,8 +49,13 @@
 		    <artifactId>mybatis</artifactId>
 		    <version>3.4.1</version>
 		</dependency>
-		
-		
+		<!-- https://mvnrepository.com/artifact/org.projectlombok/lombok -->
+		<dependency>
+   		 <groupId>org.projectlombok</groupId>
+    	<artifactId>lombok</artifactId>
+   		 <version>1.18.12</version>
+   		 <scope>provided</scope>
+		</dependency>
 		<dependency>
 		    <groupId>org.mybatis</groupId>
 		    <artifactId>mybatis-spring</artifactId>
